syntax = "proto3";

option csharp_namespace = "CategoryService1";

service Shop {
    rpc AddCategory(CategoryCreate) returns (CategoryInfo);
    rpc GetCategoryById(CategoryLookUp) returns (CategoryInfo);
    rpc AddProduct(ProductCreate) returns (ProductInfo);
    rpc getProdcutById(ProductLookUp) returns (ProductInfo);
    rpc getProductsByCategoryId(CategoryLookUp) returns (stream ProductInfo);
    rpc changeCategoryOfProduct(ProductInfo) returns (ProductInfo);
}



message CategoryLookUp {
    int32 id = 1;
}

message CategoryCreate {
    string name = 1;
    int32 parentCategory = 2;
}

message CategoryInfo {
    int32 id = 1;
    string name = 2;
    int32 parentCategory = 3;
}



message ProductLookUp {
    int32 id = 1;
}

message ProductCreate {
    string name = 1;
    string description = 2;
    double price = 3;
    int32 categoryId = 4;
}

message ProductInfo {
    int32 id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    CategoryInfo categoryId = 5;
}